; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/libdb/uIP/extr_memr.c_memr_reallocm.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/libdb/uIP/extr_memr.c_memr_reallocm.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @memr_reallocm(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load i32, i32* %5, align 4
  %8 = call i8* @memr_malloc(i32 %7)
  store i8* %8, i8** %6, align 8
  %9 = load i8*, i8** %6, align 8
  %10 = icmp eq i8* %9, null
  br i1 %10, label %11, label %15

11:                                               ; preds = %2
  %12 = load i8*, i8** %4, align 8
  %13 = load i32, i32* %5, align 4
  %14 = call i8* @memr_realloc(i8* %12, i32 %13)
  store i8* %14, i8** %3, align 8
  br label %23

15:                                               ; preds = %2
  %16 = load i8*, i8** %6, align 8
  %17 = load i8*, i8** %4, align 8
  %18 = load i32, i32* %5, align 4
  %19 = call i32 @UIP_MEMCPY(i8* %16, i8* %17, i32 %18)
  %20 = load i8*, i8** %4, align 8
  %21 = call i32 @memr_free(i8* %20)
  %22 = load i8*, i8** %6, align 8
  store i8* %22, i8** %3, align 8
  br label %23

23:                                               ; preds = %15, %11
  %24 = load i8*, i8** %3, align 8
  ret i8* %24
}

declare dso_local i8* @memr_malloc(i32) #1

declare dso_local i8* @memr_realloc(i8*, i32) #1

declare dso_local i32 @UIP_MEMCPY(i8*, i8*, i32) #1

declare dso_local i32 @memr_free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
